[gd_scene load_steps=2 format=3 uid="uid://cveq04857s30v"]

[ext_resource type="Script" path="res://ui/pause_menu.gd" id="1_01jhj"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_01jhj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 240
theme_override_constants/margin_top = 160
theme_override_constants/margin_right = 240
theme_override_constants/margin_bottom = 160

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.513726)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Paused" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Paused"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Resume
"

[node name="SoundGridContainer" type="GridContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 5
columns = 2

[node name="VolumeLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/SoundGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/MarginContainer/VBoxContainer/SoundGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.01

[node name="MusicLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/SoundGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Music"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/MarginContainer/VBoxContainer/SoundGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.01

[node name="SFXLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/SoundGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Sound Effects"

[node name="SFXSlider" type="HSlider" parent="MarginContainer/MarginContainer/VBoxContainer/SoundGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.01

[node name="MainMenu" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Main Menu"

[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="value_changed" from="MarginContainer/MarginContainer/VBoxContainer/SoundGridContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/MarginContainer/VBoxContainer/SoundGridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/MarginContainer/VBoxContainer/SoundGridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
